--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.15",
-    "onchange": "^7.1.0"
+    "onchange": "^7.1.0",
+    "uuid": "^8.3.2"
   }
 }
